--- a/styling.css
+++ b/styling.css
@@ -44,13 +44,17 @@ body{
 }
 #image img{
     max-width: 500px;
+/*
     max-height: 333px;  
     min-width: 450px;
     min-height: 300px;
+*/
 }
 img{
     width: 100%;
+    height: 100%;
 }
+
 
 #text{
     font-family: "Open Sans", sans-serif;
